tests/expectations/parser/functions/mode_outside_tuple.out
namespace = "Parse"
expectation = "Fail"
outputs = ["""
Error [EPAR0370009]: unexpected string: expected 'identifier', found '('
    --> test:4:15
     |
   4 |     transition(a: u8) -> public (u8, u8) {
     |               ^"""]
